--- a/findplay.html
+++ b/findplay.html
@@ -184,12 +184,12 @@
 
     <!-- Sessão de Cenários -->
     <div id="cenarios-container">
-        <img id="cenario1" class="cenario" src="cenario1.png" alt="cenário 1" />
-        <img id="cenario2" class="cenario" src="cenario2.png" alt="cenário 2" />
-        <img id="cenario3" class="cenario" src="cenario3.png" alt="cenário 3" />
-        <img id="cenario4" class="cenario" src="cenario4.png" alt="cenário 4" />
-        <img id="cenario5" class="cenario" src="cenario5.png" alt="cenário 5" />
-        <img id="cenario6" class="cenario" src="cenario6.png" alt="cenário 6" />
+        <img id="cenario1" class="cenario" src="cenario1.png.png" alt="cenário 1" />
+        <img id="cenario2" class="cenario" src="cenario2.png.png" alt="cenário 2" />
+        <img id="cenario3" class="cenario" src="cenario3.png.png" alt="cenário 3" />
+        <img id="cenario4" class="cenario" src="cenario4.png.png" alt="cenário 4" />
+        <img id="cenario5" class="cenario" src="cenario5.png.png" alt="cenário 5" />
+        <img id="cenario6" class="cenario" src="cenario6.png.png" alt="cenário 6" />
         <img id="cenario7" class="cenario" src="https://via.placeholder.com/800x500/E6E6FA/000000?text=Cenário+7" alt="cenário 7" />
         <img id="cenario8" class="cenario" src="https://via.placeholder.com/800x500/F0FFF0/000000?text=Cenário+8" alt="cenário 8" />
         <img id="cenario9" class="cenario" src="https://via.placeholder.com/800x500/FFFACD/000000?text=Cenário+9" alt="cenário 9" />
