--- a/findplay.html
+++ b/findplay.html
@@ -34,7 +34,7 @@
     <div id="message"></div>
     <div id="status"></div>
 
-    <img id="custom-button-img" src="interrogação.webp" alt="" />
+    <img id="custom-button-img" src="https://ih1.redbubble.net/image.4967803996.1600/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.webp" alt="" />
 
     <div id="fim-de-jogo">
         <div>
@@ -63,4 +63,5 @@
  
 </body>
 </html>
+
 
